2009-05-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxrwlock01/psxrwlock01.scn, psxrwlock01/test.c: Add test case for
	NULL attribute pointer on init.

2009-05-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxsem01/Makefile.am, psxsem01/init.c, psxsem01/psxsem01.scn,
	psxtimer01/psxtimer.c, psxtimer01/system.h, psxtimer02/psxtimer.c:
	Improved so coverage is better.

2009-05-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psx04/init.c: Correct errors introduced by using different variable
	for return type when correcting typing warnings.

2009-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add new test to provide coverage analysis
	of the current implementation of getitimer() and setitimer().
	* psxitimer/.cvsignore, psxitimer/Makefile.am, psxitimer/init.c,
	psxitimer/psxitimer.scn: New files.

2009-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxsysconf/init.c, psxsysconf/psxsysconf.scn: Add missing error test
	case to improve coverage analysis.

2009-05-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psx01/init.c, psx01/task.c, psx02/init.c, psx02/task.c, psx03/init.c,
	psx04/init.c, psx04/task1.c, psx04/task3.c, psx05/init.c,
	psx06/init.c, psx07/init.c, psx08/init.c, psx09/init.c, psx11/task.c,
	psx12/init.c, psx13/main.c, psx13/test.c, psxbarrier01/test.c,
	psxcancel/init.c, psxcleanup/psxcleanup.c, psxenosys/init.c,
	psxmsgq02/init.c, psxtime/main.c, psxtime/test.c,
	psxtimer01/psxtimer.c, psxtimer02/psxtimer.c: Fix warnings.

2009-05-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxhdrs/clock01.c, psxhdrs/clock02.c, psxhdrs/clock03.c,
	psxhdrs/clock04.c, psxhdrs/clock05.c, psxhdrs/clock06.c,
	psxhdrs/cond01.c, psxhdrs/cond02.c, psxhdrs/cond03.c,
	psxhdrs/cond04.c, psxhdrs/cond05.c, psxhdrs/cond06.c,
	psxhdrs/cond07.c, psxhdrs/cond08.c, psxhdrs/cond09.c,
	psxhdrs/cond10.c, psxhdrs/key01.c, psxhdrs/key02.c, psxhdrs/key03.c,
	psxhdrs/key04.c, psxhdrs/mutex01.c, psxhdrs/mutex02.c,