@@ -6,7 +6,7 @@ ACLOCAL_AMFLAGS = -I ../aclocal
 
 SUBDIRS = psxhdrs psx01 psx02 psx03 psx04 psx05 psx06 psx07 psx08 psx09 \
     psx10 psx11 psx12 psx13 psx14 psxcleanup psxtime psxtimer01 psxtimer02  \
-    psxcancel psxbarrier01 psxmsgq01 psxmsgq02 psxrwlock01 psxsem01 \
+    psxcancel psxbarrier01 psxmsgq01 psxmsgq03 psxrwlock01 psxsem01 \
     psxspin01 psxenosys psxsignal01 psxsysconf psxualarm psxkey01 \
     psxfatal01 psxfatal02 psxitimer
 
